<resources>
    <string name="app_name">MyCloset</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_calendar">Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_closet">Closet</string>
    <string name="title_profile">Profile</string>
    <string name="greetings">"Hello, "</string>
    <string name="outfit_registered">Good choice!</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="sign_up_no_name">Write your name in the text field, please</string>
    <string name="sign_up_name_alike">That doesn\'t look like a name</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="your_first_time_sign_up_here">Your first time? Sign up here</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_g_nike_adidas_etc">e.g.: Nike, Adidas, etc</string>
    <string name="e_g_t_shirt_trousers_etc">e.g.: T-Shirt, trousers, etc.</string>
    <string name="brand">Brand:</string>
    <string name="category">Category:</string>
    <string name="image">Image:</string>
    <string name="add_a_garment">ADD A GARMENT</string>
    <string name="create_a_new_outfit">CREATE A NEW OUTFIT</string>
    <string name="select_some_clothes">Select some clothes</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="add_garment">+ Add garment</string>
    <string name="name">Name (Optional):</string>
    <string name="add_a_picture_of_the_outfit_on_a_surface_or_wearing_it">Add a picture of the outfit, on a surface or wearing it yourself!</string>
    <string name="what_are_you_wearing_right_now">What are you wearing right now?</string>
    <string name="select_outfit">Select outfit</string>
    <string name="nclick_on_the_button_below_to_register_the_outfit_you_are_currently_wearing_n">\nClick on the button below to register the outfit you are currently wearing\n</string>
    <string name="more_features_to_come">More features to come!</string>
    <string name="nplan_events_and_see_the_outfits_you_wore_each_day_on_the_calendar_recommendations_based_on_your_usage_pattern_outfit_suggestions_customizable_profile_n">\nPlan events and see the outfits you wore each day on the calendar, recommendations based on your usage pattern, outfit suggestions, customizable profile...\n</string>
    <string name="x_delete">X Delete</string>
    <string name="composed_by">Composed by</string>
    <string name="clothes">Clothes</string>
    <string name="outfits" translatable="false">Outfits</string>
    <string name="this_seems_a_bit_empty_n_nadd_clothes_with_the_floating_button_of_the_wardrobe_tab">This seems a bit empty... :(\\n\\nAdd clothes using the floating button of the Closet tab</string>
    <string name="save_your_favourite_combinations_of_clothes_in_this_tab">Save your favourite combinations of clothes in this tab!</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="show_all">Show all</string>
    <string name="sweaters">Sweaters</string>
    <string name="hoodies">Hoodies</string>
    <string name="polos">Polos</string>
    <string name="jackets">Jackets</string>
    <string name="shirts">Shirts</string>
    <string name="coats">Coats</string>
    <string name="shorts" translatable="false">Shorts</string>
    <string name="pants">Pants</string>
    <string name="shoes">Shoes</string>
    <string name="flip_flops">Flip flops</string>
    <string name="bikinis">Bikinis</string>
    <string name="swimsuits">Swimsuits</string>
    <string name="hats">Hats</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="separated_by_commas">Separated by commas</string>
    <string name="hint_optional_name">An optional name</string>
    <string name="colors">Colors (optional):</string>
    <string name="select">Select</string>
    <string name="t_shirts_sing">T-Shirt</string>
    <string name="hoodies_sing">Hoodie</string>
    <string name="sweaters_sing">Sweater</string>
    <string name="polos_sing">Polo</string>
    <string name="shirts_sing">Shirt</string>
    <string name="jackets_sing">Jacket</string>
    <string name="coats_sing">Coat</string>
    <string name="pants_sing">Pants</string>
    <string name="shorts_sing">Shorts</string>
    <string name="shoes_sing">Shoes</string>
    <string name="flip_flops_sing">Flip flops</string>
    <string name="hats_sing">Hat</string>
    <string name="swimsuits_sing">Swimsuit</string>
    <string name="bikinis_sing">Bikini</string>
    <string name="name_outfit">Name:</string>
</resources>