<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_closet"
        android:icon="@drawable/baseline_door_sliding_24"
        android:title="@string/title_closet" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />

<!--    <item-->
<!--        android:id="@+id/navigation_scroll"-->
<!--        android:icon="?android:attr/actionModeFindDrawable"-->
<!--        android:title="Scroll" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_another_scroll"-->
<!--        android:icon="?attr/actionModePasteDrawable"-->
<!--        android:title="Another Scroll" />-->
</menu>