<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mycloset.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_closet"
        android:name="com.example.mycloset.ui.closet.ClosetFragment"
        android:label="@string/title_closet"
        tools:layout="@layout/fragment_closet" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.mycloset.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mycloset.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <!--    <fragment-->
<!--        android:id="@+id/navigation_scroll"-->
<!--        android:brand="com.example.mycloset.ui.scroll.ScrollFragment"-->
<!--        android:label="Scroll"-->
<!--        tools:layout="@layout/fragment_scroll" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_another_scroll"-->
<!--        android:brand="com.example.mycloset.ui.anotherscroll.AnotherScrollFragment"-->
<!--        android:label="AnotherScroll"-->
<!--        tools:layout="@layout/fragment_another_scrolling" />-->

</navigation>