<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.closet.AddOutfitFragment"
    style="@style/MyBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView10"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/create_a_new_outfit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/select_some_clothes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/carousel_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:listitem="@layout/fragment_clothes_choosen_item" />

<!--                <ImageView-->
<!--                    android:id="@+id/carousel_image_view"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    app:srcCompat="@drawable/camiseta" />-->

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    app:srcCompat="@drawable/camiseta" />-->


        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/editText_outfit_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_add_garment" />

        <EditText
            android:id="@+id/editText_outfit_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/add_a_picture_of_the_outfit_on_a_surface_or_wearing_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_outfit_name"
            app:layout_constraintVertical_bias="0.25" />

        <ImageView
            android:id="@+id/imageView_outfit_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <Button
            android:id="@+id/button_add_garment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_garment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carousel_recycler_view" />

        <Button
            android:id="@+id/button_save_outfit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_discard_outfit"
            app:layout_constraintTop_toBottomOf="@id/imageView_outfit_picture" />

        <Button
            android:id="@+id/button_discard_outfit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/discard"
            app:layout_constraintEnd_toStartOf="@+id/button_save_outfit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_outfit_picture" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>